# Kkk

./: .env.example  DEPLOY_FREE.md  DNS_SETUP.md  README.md  RENDER_AUTO_DEPLOY.md  RENDER_SETUP.md  deploy.sh  render.yaml  start-local.sh
.github/workflows/: ci-cd.yaml  deploy.yml  gh-pages.yml
unified-exchange-platform/: .dockerignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
unified-exchange-platform/argocd/: app-of-apps.yaml
unified-exchange-platform/frontend/: Dockerfile  next.config.js  package.json
unified-exchange-platform/frontend/src/: config.js
unified-exchange-platform/helm-charts/frontend/: Chart.yaml  values.yaml
unified-exchange-platform/market-data-service/: Dockerfile  go.mod  main.go
unified-exchange-platform/matching-engine/: Cargo.toml  Dockerfile
unified-exchange-platform/matching-engine/src/: asset_traits.rs  main.rs
unified-exchange-platform/nginx/: nginx.conf
unified-exchange-platform/observability/: grafana-dashboard.json  prometheus.yml
unified-exchange-platform/order-gateway/: Dockerfile  go.mod  main.go
unified-exchange-platform/quant-studio/: Dockerfile  sandbox_runner.py
unified-exchange-platform/risk-engine/: Dockerfile  requirements.txt
unified-exchange-platform/scripts/: deploy-platform.sh  healthcheck.sh
unified-exchange-platform/settlement-service/: Dockerfile  package.json
unified-exchange-platform/shared/: cold-wallet.js  database.js  k99-token.js  market-data.js
unified-exchange-platform/terraform/: main.tf
unified-exchange-platform/user-service/: Dockerfile  package.json
(+40 files in other folders)
