[package]
name = "unified-exchange-matching"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
rdkafka = { version = "0.34", features = ["cmake-build"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true


